--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,16 +1,11 @@
-@import "./base/variables";
-@import "./base/typography";
+@import "./components/document";
+@import "./components/filter-button";
+@import "./components/search-field";
 
-@import "./components/button";
-@import "./components/encounter-name";
-@import "./components/icon";
-@import "./components/list-item";
-@import "./components/quantity-controls";
-@import "./components/section-header";
+@import "./layout/document-list";
+@import "./layout/footer";
+@import "./layout/main-wrapper";
+@import "./layout/sheet";
+@import "./layout/spinner-wrapper";
 
-@import "./foundry/sheet";
-
-@import "./layout/content-body";
-@import "./layout/list";
-@import "./layout/list-section";
-@import "./layout/header"
+@import "./vendor/range-slider";
