--- a/src/scss/layout/_sheet.scss
+++ b/src/scss/layout/_sheet.scss
@@ -1,9 +1,9 @@
-.a5efc-compendium-sheet {
+.fc-compendium-sheet {
   min-height: 80vh;
   max-height: 80vh;
   min-width: 35rem;
 }
 
-.a5efc-compendium-sheet .window-content {
+.fc-compendium-sheet .window-content {
   padding: 0 !important;
 }
