--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,9 @@
+@import "./base/typography";
+@import "./base/variables";
+
 @import "./components/document";
 @import "./components/filter-button";
+@import "./components/import-button";
 @import "./components/search-field";
 
 @import "./layout/document-list";
