--- a/src/scss/layout/_document-list.scss
+++ b/src/scss/layout/_document-list.scss
@@ -1,11 +1,10 @@
-.a5efc-document-list {
+.fc-document-list {
+  grid-area: main;
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  grid-area: main;
+  gap: 0;
+  padding: 0 0.375rem 0 0 ;
   margin: 0;
-  padding: 0;
   list-style: none;
   overflow-y: auto;
-  padding-right: 0.5rem;
 }
